syntax = "proto3";
package provider;

service ProviderService {
  rpc CreateProvider (Provider) returns (Provider);
  rpc FindAll (Empty) returns (ProviderList);
  rpc FindOne (GetProviderRequest) returns (Provider);
  rpc UpdateProvider (Provider) returns (Provider);
  rpc DeleteProvider (GetProviderRequest) returns (DeleteResponse);
  rpc GetCities (Empty) returns (LocationList);
  rpc GetDistricts (GetProviderRequest) returns (LocationList);
  rpc GetCategories (Empty) returns (CategoryList);
}

message Empty {}
message GetProviderRequest { string id = 1; }
message DeleteResponse { bool success = 1; }

message Provider {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  string email = 5;
  repeated string tags = 6;
  double longitude = 7;
  double latitude = 8;
}

message ProviderList { repeated Provider providers = 1; }
message Location { string id = 1; string name = 2; }
message LocationList { repeated Location locations = 1; }
message Category { string id = 1; string name = 2; }
message CategoryList { repeated Category categories = 1; }