import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { ProviderService } from './provider.service';

@Controller()
export class ProviderController {
  constructor(private readonly providerService: ProviderService) {}

  // 1. Yeni Usta OluÅŸturma
  @GrpcMethod('ProviderService', 'Create')
  create(data: any) {
    return this.providerService.create(data);
  }

  // 2. TÃ¼m UstalarÄ± Listeleme
  @GrpcMethod('ProviderService', 'FindAll')
  async findAll() {
    const providers = await this.providerService.findAll();
    // Proto dosyasÄ±ndaki 'ProviderList' formatÄ±na (repeated providers) Ã§eviriyoruz
    return { providers };
  }

  // 3. Tek Usta Bulma
  @GrpcMethod('ProviderService', 'FindOne')
  findOne(data: { id: string }) {
    return this.providerService.findOne(data.id);
  }

  // 4. Usta GÃ¼ncelleme
  @GrpcMethod('ProviderService', 'Update')
  update(data: any) {
    // Proto'dan gelen veride 'id' ayrÄ±ÅŸtÄ±rÄ±lÄ±r
    const { id, ...rest } = data;
    return this.providerService.update(id, rest);
  }

  // 5. Usta Silme
  @GrpcMethod('ProviderService', 'Delete')
  delete(data: { id: string }) {
    return this.providerService.delete(data.id);
  }

  // --- YardÄ±mcÄ± Endpointler ---

  // 6. Åžehirleri Getir
  @GrpcMethod('ProviderService', 'GetCities')
  async getCities() {
    const items = await this.providerService.getCities();
    // Proto dosyasÄ±ndaki 'CityList' formatÄ±na (repeated items) Ã§eviriyoruz
    return { items };
  }

  // 7. Ä°lÃ§eleri Getir
  @GrpcMethod('ProviderService', 'GetDistricts')
  async getDistricts(data: { city: string }) {
    const items = await this.providerService.getDistricts(data.city);
    // Proto dosyasÄ±ndaki 'DistrictList' formatÄ±na (repeated items) Ã§eviriyoruz
    return { items };
  }

  // 8. Kategorileri Getir
  @GrpcMethod('ProviderService', 'GetCategories')
  async getCategories() {
    const items = await this.providerService.getCategories();
    // Proto dosyasÄ±ndaki 'CategoryList' formatÄ±na (repeated items) Ã§eviriyoruz
    return { items };
  }

  // ðŸ”¥ 9. Google Crawler BaÅŸlat
  @GrpcMethod('ProviderService', 'StartGoogleCrawl')
  async startGoogleCrawl() {
    return await this.providerService.startTurkeyGeneralCrawl();
  }
}